--- a/webPage.html
+++ b/webPage.html
@@ -2,7 +2,7 @@
 <html>
 <div>
 <head>
- <title>Bablo Escobar</title>
+ <title>Pablo Escobar</title>
  
 </head>
 <h1 id="title"> <center>PABLO ESCOBAR</center></h1>
